--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="header-info-navbar-container d-flex flex-column text-white">
 
                         <div class="header-info d-flex flex-row">
-                            <img class="photo" src="imgs/photo.png" alt="Foto">
+                            <img class="photo" src="imgs/photo.jpg" alt="Foto">
                             <div class="main-info d-flex flex-column justify-content-center">
                                 <h1 class="name">Alisson Lewinski</h1>
                                 <h3 class="occupation">Desenvolvedor</h3>
