Primeira versão do site

--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -1,1 +1,7 @@
-<h1>experiência</h1>
+<h1>Experiência</h1>
+<div class="divider"></div>
+
+<div class="div-item d-flex flex-row">
+    <div class="vertical-divider"></div>
+    <p>Atendimento - Sanepar Pinhais (2019 - 2020)</p>
+</div>
