--- a/pages/formacao.html
+++ b/pages/formacao.html
@@ -1,1 +1,17 @@
-<h1>formação</h1>
+<h1>Formação</h1>
+<div class="divider"></div>
+
+<div class="div-item d-flex flex-row">
+    <div class="vertical-divider"></div>
+    <p>Ensino médio completo - Sesi (Final de 2020)</p>
+</div>
+
+<div class="div-item d-flex flex-row">
+    <div class="vertical-divider"></div>
+    <p>Curso Técnico em Desenvolvimento de Sistemas - Senai (2019 - Final de 2020)</p>
+</div>
+
+<div class="div-item d-flex flex-row">
+    <div class="vertical-divider"></div>
+    <p>Design de Jogos e Aplicativos - Gamescola (2017 - 2018)</p>
+</div>
