--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -1,1 +1,7 @@
-<h1>início</h1>
+<h1>Início</h1>
+<div class="divider"></div>
+<p>Meu interesse em programação começou em 2017, quando comecei um curso de design
+    de jogos e aplicativos, e desde então sempre gostei do mundo da computação. Em 2019
+    comecei o curso Técnico em Desenvolvimento de Sistemas no SENAI-Pinhais e o finalizarei 
+    esse ano. Atualmente estou focado em desenvolver meu TCC e estudar bastante para poder
+    trabalhar na área.</p>
