--- a/pages/interesses.html
+++ b/pages/interesses.html
@@ -1,1 +1,23 @@
-<h1>interesses</h1>
+<h1>Interesses</h1>
+<div class="divider"></div>
+
+<div class="div-item d-flex flex-row">
+    <div class="vertical-divider"></div>
+    <p>Games</p>
+</div>
+
+<div class="div-item d-flex flex-row">
+    <div class="vertical-divider"></div>
+    <p>Livros</p>
+</div>
+
+<div class="div-item d-flex flex-row">
+    <div class="vertical-divider"></div>
+    <p>Ciclismo</p>
+</div>
+
+<div class="div-item d-flex flex-row">
+    <div class="vertical-divider"></div>
+    <p>Música</p>
+</div>
+
