--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -1,1 +1,21 @@
-<h1>projetos</h1>
+<h1>Projetos desenvolvidos no curso</h1>
+<div class="divider"></div>
+
+<a href="../projetos/atividadePapelaria/index.html">
+    <div class="div-item d-flex flex-row">
+        <div class="vertical-divider"></div>
+        <p>Site - Papelaria (HTML e CSS)</p>
+    </div>
+</a>
+
+<a href="../projetos/atividadeIMC/index.html">
+    <div class="div-item d-flex flex-row">
+        <div class="vertical-divider"></div>
+        <p>Cálculo do IMC (Javascript Básico)</p>
+    </div>
+</a>
+
+<div class="div-item d-flex flex-row">
+    <div class="vertical-divider"></div>
+    <p>Portfólio (Esse site)</p>
+</div>
