--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                                     <a class="nav-link active" href="#/pages/experiencia.html">Experiência</a>
                                     <a class="nav-link active" href="#/pages/projetos.html">Projetos</a>
                                     <a class="nav-link active" href="#/pages/interesses.html">Interesses</a>
+                                    <a class="nav-link active" href="#/pages/contato.html">Contato</a>
                                   </div>
                                 </div>
                               </nav>
