--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                         <div class="navbar-container">
                             
-                            <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+                            <nav class="navbar navbar-expand-md navbar-dark bg-dark">
                                 <a class="navbar-brand"><i class="fas fa-play"></i></a>
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                                   <span class="navbar-toggler-icon"></span>
