Adicionado - Cursos da Udemy

--- a/pages/formacao.html
+++ b/pages/formacao.html
@@ -1,6 +1,27 @@
 <h1>Formação</h1>
 <div class="divider"></div>
 
+<a href="https://www.udemy.com/course/java-curso-completo/">
+    <div class="div-item d-flex flex-row">
+        <div class="vertical-divider"></div>
+        <p>Curso Java - Udemy (Concluído)</p>
+    </div>
+</a>
+
+<a href="https://www.udemy.com/course/curso-web/">
+    <div class="div-item d-flex flex-row">
+        <div class="vertical-divider"></div>
+        <p>Curso Web Moderno - Udemy (Em progresso)</p>
+    </div>
+</a>
+
+<a href="https://www.udemy.com/course/curso-react-native/">
+    <div class="div-item d-flex flex-row">
+        <div class="vertical-divider"></div>
+        <p>Curso React Native - Udemy (Em progresso)</p>
+    </div>
+</a>
+
 <div class="div-item d-flex flex-row">
     <div class="vertical-divider"></div>
     <p>Ensino médio completo - Sesi (Final de 2020)</p>
